<resources>
    <string name="app_name">ProyectoFinalDAM</string>

    <string name="emailogin">Correo electronico</string>

    <string name="pass">Contraseña</string>

    <string name="Logo">Foto del logo</string>

    <string name="menuPrincipal">Menu principal</string>
    <string name="registro">Registro</string>
    <string name="paginaPrincipal">Pagina principal</string>

    <string name="buscar">Buscar</string>
    <string name="compartir">Compartir</string>

    <string name="perfil">Tu perfil</string>

    <string name="NombreUsuarioRegistro">Tu nombre de usuario</string>
    <string name="emailRegistro">Correo electronico</string>


</resources>