<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/buscar"
        android:icon="@drawable/buscar"
        android:title="@string/buscar"
        app:showAsAction="always" />
    <item
        android:id="@+id/compartir"
        android:icon="@drawable/compartir"
        android:title="@string/compartir"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuPrincipal"
        android:title="@string/menuPrincipal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/registro"
        android:title="@string/registro" />
    <item
        android:id="@+id/paginaPrincipal"
        android:title="@string/registro" />
</menu>